--- a/app/src/main/res/layout-xlarge/activity_data_kecamatan.xml
+++ b/app/src/main/res/layout-xlarge/activity_data_kecamatan.xml
@@ -11,20 +11,26 @@
         layout="@layout/menu_atas"
         android:layout_width="111dp"
         android:layout_height="36dp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline16"
+        app:layout_constraintEnd_toStartOf="@+id/guideline17"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.021" />
 
     <ImageView
         android:id="@+id/imageView8"
         android:layout_width="258dp"
         android:layout_height="31dp"
+        android:layout_marginStart="44dp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="100dp"
         app:layout_constraintBottom_toTopOf="@+id/map"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline14"
+        app:layout_constraintHorizontal_bias="0.304"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.059"
+        app:layout_constraintVertical_bias="0.25"
         app:srcCompat="@drawable/apik"
         tools:ignore="ContentDescription" />
 
@@ -34,10 +40,11 @@
         android:layout_height="@dimen/_27sdp"
         android:layout_marginStart="36dp"
         app:layout_constraintBottom_toBottomOf="@+id/txtPilihKecamatan"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline14"
+        app:layout_constraintHorizontal_bias="0.923"
         app:layout_constraintStart_toEndOf="@+id/txtPilihKecamatan"
         app:layout_constraintTop_toTopOf="@+id/txtPilihKecamatan"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <Spinner
         android:id="@+id/spPotensi"
@@ -52,56 +59,90 @@
 
     <TextView
         android:id="@+id/txtPilihKecamatan"
-        android:layout_width="209dp"
-        android:layout_height="47dp"
+        android:layout_width="159dp"
+        android:layout_height="22dp"
         android:fontFamily="@font/arial"
         android:text="Pilih Kecamatan"
         android:textAlignment="textStart"
         android:textColor="@color/black"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/map"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.135"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView8"
-        app:layout_constraintVertical_bias="0.187"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline16"
+        app:layout_constraintEnd_toStartOf="@+id/guideline17"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/guideline13"
+        app:layout_constraintTop_toTopOf="@+id/guideline15"
+        app:layout_constraintVertical_bias="0.639"
         tools:ignore="HardcodedText" />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="219dp"
-        android:layout_height="39dp"
-        android:layout_marginTop="36dp"
+        android:layout_width="159dp"
+        android:layout_height="22dp"
         android:fontFamily="@font/arial"
         android:text="Pilih Potensi"
         android:textAlignment="textStart"
         android:textColor="@color/black"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/map"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline16"
         app:layout_constraintEnd_toEndOf="@+id/txtPilihKecamatan"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/txtPilihKecamatan"
         app:layout_constraintTop_toBottomOf="@+id/txtPilihKecamatan"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_bias="0.202"
         tools:ignore="HardcodedText" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline13"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="405dp" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline14"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="407dp" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline15"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_end="764dp" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline16"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.25" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline17"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.50121653" />
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="777dp"
-        android:layout_height="846dp"
+        android:layout_width="400dp"
+        android:layout_height="574dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.238"
+        app:layout_constraintHorizontal_bias="0.473"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintTop_toTopOf="@+id/guideline16"
+        app:layout_constraintVertical_bias="0.0"
         tools:context=".MapDataKecamatan" />
 
     <Button
         android:id="@+id/btnPeta"
-        android:layout_width="206dp"
-        android:layout_height="47dp"
+        android:layout_width="148dp"
+        android:layout_height="32dp"
         android:background="@color/goldenrot"
         android:text="Tampilkan Peta"
         android:textColor="@color/black"
@@ -110,20 +151,20 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.304"
+        app:layout_constraintVertical_bias="0.74"
         tools:ignore="HardcodedText" />
 
     <Button
         android:id="@+id/btnPdf"
-        android:layout_width="172dp"
-        android:layout_height="52dp"
+        android:layout_width="145dp"
+        android:layout_height="32dp"
         android:background="@color/goldenrot"
         android:text="Data Detail"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="@+id/btnPeta"
-        app:layout_constraintEnd_toEndOf="@+id/spPotensi"
-        app:layout_constraintHorizontal_bias="0.959"
-        app:layout_constraintStart_toEndOf="@+id/btnPeta"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.733"
+        app:layout_constraintStart_toStartOf="@+id/guideline17"
         app:layout_constraintTop_toTopOf="@+id/btnPeta"
         app:layout_constraintVertical_bias="0.0"
         tools:ignore="HardcodedText" />
@@ -132,18 +173,16 @@
         android:id="@+id/fabBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
         android:layout_marginTop="514dp"
-        android:layout_marginRight="25dp"
         android:clickable="true"
-        android:focusable="true"
         android:onClick="utama"
         app:backgroundTint="@color/aqua"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.024"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.927"
-        app:srcCompat="@drawable/back" />
+        app:layout_constraintEnd_toStartOf="@+id/guideline17"
+        app:layout_constraintHorizontal_bias="0.069"
+        app:layout_constraintStart_toStartOf="@+id/guideline13"
+        app:layout_constraintTop_toTopOf="@+id/map"
+        app:layout_constraintVertical_bias="0.384"
+        app:srcCompat="@drawable/back"
+        android:focusable="true" />
 </androidx.constraintlayout.widget.ConstraintLayout>
