--- a/app/src/main/res/layout-normal/activity_main.xml
+++ b/app/src/main/res/layout-normal/activity_main.xml
@@ -9,8 +9,8 @@
 
     <include
         layout="@layout/menu_atas"
-        android:layout_width="50dp"
-        android:layout_height="15dp"
+        android:layout_width="157dp"
+        android:layout_height="44dp"
         app:layout_constraintBottom_toTopOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -20,98 +20,103 @@
 
     <Button
         android:id="@+id/btnUmum"
-        android:layout_width="45dp"
-        android:layout_height="39dp"
+        android:layout_width="@dimen/_120sdp"
+        android:layout_height="@dimen/_120sdp"
         android:background="@drawable/menu"
         android:onClick="potensi"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.007"
+        app:layout_constraintHorizontal_bias="0.06"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.049"
+        app:layout_constraintVertical_bias="0.118"
         tools:ignore="HardcodedText" />
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="45dp"
-        android:layout_height="39dp"
+        android:layout_width="@dimen/_120sdp"
+        android:layout_height="@dimen/_120sdp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/menumenu"
         android:onClick="kecamatan"
         app:layout_constraintBottom_toBottomOf="@+id/btnUmum"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/btnUmum"
         app:layout_constraintTop_toTopOf="@+id/btnUmum"
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="45dp"
-        android:layout_height="39dp"
+        android:layout_width="@dimen/_120sdp"
+        android:layout_height="@dimen/_120sdp"
         android:background="@drawable/menumenumenu"
         android:onClick="kawasan"
-        app:layout_constraintBottom_toBottomOf="@+id/button3"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/btnUmum"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/button3"
-        app:layout_constraintTop_toTopOf="@+id/button3"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintStart_toStartOf="@+id/btnUmum"
+        app:layout_constraintTop_toBottomOf="@+id/btnUmum"
+        app:layout_constraintVertical_bias="0.125" />
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="89dp"
-        android:layout_height="19dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="184dp"
+        android:layout_height="33dp"
+        android:layout_marginTop="12dp"
         app:layout_constraintEnd_toEndOf="@+id/imageView2"
-        app:layout_constraintHorizontal_bias="0.484"
+        app:layout_constraintHorizontal_bias="0.439"
         app:layout_constraintStart_toStartOf="@+id/imageView2"
         app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/apik"
         tools:ignore="ContentDescription" />
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="27dp"
-        android:layout_height="23dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="66dp"
+        android:layout_height="46dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.474"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.013"
         app:srcCompat="@drawable/pemkab"
         tools:ignore="ContentDescription" />
 
     <Button
         android:id="@+id/button5"
-        android:layout_width="48dp"
-        android:layout_height="39dp"
+        android:layout_width="@dimen/_120sdp"
+        android:layout_height="@dimen/_120sdp"
         android:background="@drawable/menutata"
         android:onClick="rtrw"
         app:layout_constraintBottom_toBottomOf="@+id/button4"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/button4"
-        app:layout_constraintTop_toTopOf="@+id/button4" />
+        app:layout_constraintEnd_toEndOf="@+id/button3"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/button3"
+        app:layout_constraintTop_toTopOf="@+id/button4"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="88dp"
-        android:layout_height="19dp"
+        android:layout_width="@dimen/_204sdp"
+        android:layout_height="@dimen/_37sdp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/button5"
+        app:layout_constraintHorizontal_bias="0.484"
+        app:layout_constraintStart_toStartOf="@+id/button4"
         app:srcCompat="@drawable/dpmptsp"
-        tools:ignore="ContentDescription"
-        tools:layout_editor_absoluteX="50dp"
-        tools:layout_editor_absoluteY="136dp" />
+        tools:ignore="ContentDescription" />
 
     <Button
         android:id="@+id/btnSop"
-        android:layout_width="155dp"
-        android:layout_height="20dp"
+        android:layout_width="@dimen/_242sdp"
+        android:layout_height="@dimen/_47sdp"
         android:background="@drawable/sopfront"
         android:onClick="pdfgo"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="109dp" />
+        app:layout_constraintBottom_toTopOf="@+id/imageView3"
+        app:layout_constraintEnd_toEndOf="@+id/button5"
+        app:layout_constraintHorizontal_bias="0.461"
+        app:layout_constraintStart_toStartOf="@+id/button4"
+        app:layout_constraintTop_toBottomOf="@+id/button4" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
