--- a/app/src/main/res/layout-normal/activity_splash_screen.xml
+++ b/app/src/main/res/layout-normal/activity_splash_screen.xml
@@ -47,16 +47,14 @@
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="@dimen/_283sdp"
         android:layout_height="@dimen/_48sdp"
-        android:layout_marginBottom="244dp"
+        android:layout_marginBottom="@dimen/_20sdp"
         android:indeterminate="true"
         android:max="100"
         android:progressDrawable="@drawable/custom_progress_bar"
         app:layout_constraintBottom_toTopOf="@+id/guideline7"
         app:layout_constraintEnd_toStartOf="@+id/guideline9"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/guideline8"
-        app:layout_constraintTop_toTopOf="@+id/guideline10"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintHorizontal_bias="0.362"
+        app:layout_constraintStart_toStartOf="@+id/guideline8" />
 
     <TextView
         android:id="@+id/persentasi"
