--- a/app/src/main/res/layout-xlarge/activity_show_pdf.xml
+++ b/app/src/main/res/layout-xlarge/activity_show_pdf.xml
@@ -35,8 +35,8 @@
 
     <com.github.barteksc.pdfviewer.PDFView
         android:id="@+id/pdfView"
-        android:layout_width="776dp"
-        android:layout_height="782dp"
+        android:layout_width="399dp"
+        android:layout_height="540dp"
         android:layout_below="@+id/txtPdf"
         android:layout_marginLeft="5dp"
         android:layout_marginTop="4dp"
@@ -44,14 +44,14 @@
         android:layout_marginBottom="5dp" />
 
     <Button
-        android:layout_width="165dp"
-        android:layout_height="111dp"
+        android:layout_width="@dimen/_75sdp"
+        android:layout_height="@dimen/_64sdp"
         android:layout_below="@+id/pdfView"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="635dp"
-        android:layout_marginTop="232dp"
+        android:layout_marginStart="@dimen/_250sdp"
+        android:layout_marginTop="@dimen/_15sdp"
         android:layout_marginBottom="@dimen/_10sdp"
         android:background="@drawable/back"
         android:onClick="kembali" />
