--- a/app/src/main/res/layout-xhdpi/activity_main.xml
+++ b/app/src/main/res/layout-xhdpi/activity_main.xml
@@ -20,44 +20,41 @@
 
     <Button
         android:id="@+id/btnUmum"
-        android:layout_width="178dp"
-        android:layout_height="196dp"
+        android:layout_width="@dimen/_120sdp"
+        android:layout_height="@dimen/_120sdp"
         android:background="@drawable/menu"
         android:onClick="potensi"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.05"
+        app:layout_constraintHorizontal_bias="0.185"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.029"
+        app:layout_constraintVertical_bias="0.039"
         tools:ignore="HardcodedText" />
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="178dp"
-        android:layout_height="196dp"
+        android:layout_width="@dimen/_120sdp"
+        android:layout_height="@dimen/_120sdp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/menumenu"
         android:onClick="kecamatan"
         app:layout_constraintBottom_toBottomOf="@+id/btnUmum"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/btnUmum"
         app:layout_constraintTop_toTopOf="@+id/btnUmum"
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="178dp"
-        android:layout_height="196dp"
+        android:layout_width="@dimen/_120sdp"
+        android:layout_height="@dimen/_120sdp"
         android:background="@drawable/menumenumenu"
         android:onClick="kawasan"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/btnUmum"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/btnUmum"
-        app:layout_constraintTop_toBottomOf="@+id/btnUmum"
-        app:layout_constraintVertical_bias="0.125" />
+        tools:layout_editor_absoluteY="351dp" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -85,13 +82,13 @@
 
     <Button
         android:id="@+id/button5"
-        android:layout_width="178dp"
-        android:layout_height="196dp"
+        android:layout_width="@dimen/_120sdp"
+        android:layout_height="@dimen/_120sdp"
         android:background="@drawable/menutata"
         android:onClick="rtrw"
         app:layout_constraintBottom_toBottomOf="@+id/button4"
         app:layout_constraintEnd_toEndOf="@+id/button3"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.45"
         app:layout_constraintStart_toStartOf="@+id/button3"
         app:layout_constraintTop_toTopOf="@+id/button4"
         app:layout_constraintVertical_bias="0.0" />
@@ -109,14 +106,15 @@
 
     <Button
         android:id="@+id/btnSop"
-        android:layout_width="345dp"
-        android:layout_height="71dp"
+        android:layout_width="@dimen/_242sdp"
+        android:layout_height="@dimen/_47sdp"
         android:background="@drawable/sopfront"
         android:onClick="pdfgo"
         app:layout_constraintBottom_toTopOf="@+id/imageView3"
         app:layout_constraintEnd_toEndOf="@+id/button5"
-        app:layout_constraintHorizontal_bias="0.461"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/button4"
-        app:layout_constraintTop_toBottomOf="@+id/button4" />
+        app:layout_constraintTop_toBottomOf="@+id/button4"
+        app:layout_constraintVertical_bias="0.619" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
