--- a/app/src/main/res/layout-xxhdpi/activity_main.xml
+++ b/app/src/main/res/layout-xxhdpi/activity_main.xml
@@ -20,8 +20,8 @@
 
     <Button
         android:id="@+id/btnUmum"
-        android:layout_width="@dimen/_120sdp"
-        android:layout_height="@dimen/_120sdp"
+        android:layout_width="206dp"
+        android:layout_height="186dp"
         android:background="@drawable/menu"
         android:onClick="potensi"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -34,8 +34,8 @@
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="@dimen/_120sdp"
-        android:layout_height="@dimen/_120sdp"
+        android:layout_width="203dp"
+        android:layout_height="186dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/menumenu"
         android:onClick="kecamatan"
@@ -48,8 +48,8 @@
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="@dimen/_120sdp"
-        android:layout_height="@dimen/_120sdp"
+        android:layout_width="217dp"
+        android:layout_height="196dp"
         android:background="@drawable/menumenumenu"
         android:onClick="kawasan"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -85,8 +85,8 @@
 
     <Button
         android:id="@+id/button5"
-        android:layout_width="@dimen/_120sdp"
-        android:layout_height="@dimen/_120sdp"
+        android:layout_width="194dp"
+        android:layout_height="199dp"
         android:background="@drawable/menutata"
         android:onClick="rtrw"
         app:layout_constraintBottom_toBottomOf="@+id/button4"
